call-center/src/objects/Payment_Plan__c.object
<CustomObject>
    <description>Guarantor Payment Plan details</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates plan</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charges_Added_Since_Start__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charges Added Since Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date payment plan completed</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquent_Date__c</fullName>
        <description>Date of deliquency</description>
        <label>Delinquent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Participant is past due</description>
        <label>Delinquent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Date__c</fullName>
        <description>Date of the Error</description>
        <label>Error Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execute_On_Day__c</fullName>
        <label>Execute on Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Error in plan</description>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installments_Completed__c</fullName>
        <formula>Original_Installment_Count__c -  Remaining_Installment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installments Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextPaymentDate__c</fullName>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <formula>IF(ISBLANK(Skip_Payment_Until__c),
IF(Plan_Type__c = &quot;Automatic&quot;,
  IF(Execute_On_Day__c &gt;= DAY(Today()),
    Today() + MIN(DATE(YEAR(Today()), MONTH(Today()), 1) + Execute_On_Day__c - Today(), IF(MONTH(Today()) = 12, DATE(YEAR(Today()) + 1, 1, 1), DATE(YEAR(Today()), MONTH(Today()) + 1, 1)) - Today()),
    IF(MONTH(Today()) = 12,
      DATE(YEAR(Today()) + 1, 1, 1) + Execute_On_Day__c,
      Today() + MIN(DATE(YEAR(Today()), MONTH(Today()) + 1, 1) + Execute_On_Day__c - Today(), DATE(YEAR(Today()), MONTH(Today()) + 2, 1) - Today()))) - 1,
  IF(DAY(Today()) &gt; Execute_On_Day__c + 21,
    IF(MONTH(Today()) = 12, DATE(YEAR(Today()) + 1, 1, 1), DATE(YEAR(Today()), MONTH(Today()) + 1, 1)),
    IF(MONTH(Today()) = 1,
      IF(DATE(YEAR(Today()) - 1, 12, Execute_On_Day__c) + 21 &gt; Today(),
        DATE(YEAR(Today()) - 1, 12, 1),
        DATE(YEAR(Today()), MONTH(Today()), 1)),
      IF(DATE(YEAR(Today()), MONTH(Today()) - 1, Execute_On_Day__c) + 21 &gt; Today(),
        DATE(YEAR(Today()), MONTH(Today()) - 1, 1),
        DATE(YEAR(Today()), MONTH(Today()), 1)))) + Execute_On_Day__c + 20),
  Skip_Payment_Until__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Payment Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Balance__c</fullName>
        <description>Type of plan</description>
        <label>Plan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Installment_Count__c</fullName>
        <description>payment installment months</description>
        <label>Original Installments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Standing__c</fullName>
        <description>PPS is the status of the ACTIVE payment plan.

            Options: Past Due, In Error, Good Standing</description>
        <formula>IF(Active__c=FALSE,&quot;&quot;,IF(Delinquent__c = TRUE, &quot;Past Due&quot;, IF(Has_Error__c = TRUE, &quot;In Error&quot;, &quot;Good Standing&quot;)))</formula>
        <label>Payment Plan Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Origin__c</fullName>
        <label>Plan Origin</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>Plan Number type small int</description>
        <label>Plan Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Value_Modified_Date__c</fullName>
        <description>time stamp of plan modification</description>
        <label>Plan Value Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Installment_Count__c</fullName>
        <formula>ABS(CEILING(Remaining_Balance__c / Installment_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skip_Payment_Until__c</fullName>
        <description>Defines making payment until date</description>
        <label>Skip Payment Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_To_Delinquency__c</fullName>
        <formula>Delinquent_Date__c -   DATEVALUE( CreatedDate )</formula>
        <label>Time to Delinquency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Guarantor__c</columns>
        <columns>Active__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Execute_On_Day__c</columns>
        <columns>Next_Payment_Date__c</columns>
        <columns>Skip_Payment_Until__c</columns>
        <columns>Delinquent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>